--- a/devUtil/pom.xml
+++ b/devUtil/pom.xml
@@ -105,6 +105,11 @@
             <version>5.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.stuxuhai</groupId>
+            <artifactId>jpinyin</artifactId>
+            <version>1.1.8</version>
+        </dependency>
 
     </dependencies>
 
