--- a/devUtil/pom.xml
+++ b/devUtil/pom.xml
@@ -8,7 +8,8 @@
     <artifactId>devUtil</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <junit-version>4.12</junit-version>
+        <junit.jupiter.version>5.9.2</junit.jupiter.version>
+        <junit.platform.version>1.9.2</junit.platform.version>
         <druid-version>1.2.16</druid-version>
         <mysql-driver-version>6.0.6</mysql-driver-version>
         <okhtt-version>3.12.0</okhtt-version>
@@ -45,6 +46,18 @@
         </profile>
     </profiles>
     <dependencies>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.javassist</groupId>
@@ -106,9 +119,22 @@
         </dependency>
 
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.stuxuhai</groupId>
             <artifactId>jpinyin</artifactId>
             <version>1.1.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>23.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
