--- a/devUtil/pom.xml
+++ b/devUtil/pom.xml
@@ -17,6 +17,7 @@
         <hutool-version>5.3.10</hutool-version>
         <netty-version>4.1.51.Final</netty-version>
         <protostuff-version>1.7.2</protostuff-version>
+        <kryo-version>5.4.0</kryo-version>
         <slf4j-version>1.7.30</slf4j-version>
         <cglib-version>2.2.2</cglib-version>
         <tess4j-version>5.4.0</tess4j-version>
@@ -151,6 +152,23 @@
             <version>2.0.7</version>
         </dependency>
 
+        <!-- 序列化用 -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>${protostuff-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>${protostuff-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo5</artifactId>
+            <version>${kryo-version}</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/jul-to-slf4j -->
         <dependency>
