--- a/devUtil/pom.xml
+++ b/devUtil/pom.xml
@@ -23,6 +23,7 @@
         <tess4j-version>5.4.0</tess4j-version>
         <poi-version>5.2.3</poi-version>
         <ansj_seg-version>5.1.6</ansj_seg-version>
+        <lombok-version>1.18.22</lombok-version>
         <scala3-library_3-version>3.3.0-RC1-bin-20221112-ab2ed31-NIGHTLY</scala3-library_3-version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -142,14 +143,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.4</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/log4j-over-slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.4</version>
         </dependency>
 
         <!-- 序列化用 -->
@@ -170,11 +171,12 @@
             <version>${kryo-version}</version>
         </dependency>
 
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/jul-to-slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.4</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
@@ -184,6 +186,19 @@
             <version>1.4.6</version>
             <scope>test</scope>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-simple</artifactId>-->
+<!--            <version>2.0.7</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok-version}</version>
+        </dependency>
+
 
 
 
