--- a/supports/spring-supports/pom.xml
+++ b/supports/spring-supports/pom.xml
@@ -33,6 +33,16 @@
     <dependencies>
 
         <dependency>
+            <groupId>cn.dev.utils</groupId>
+            <artifactId>devUtil</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
